--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head></head>
     <body>
         <h1>Cool Project</h1>
+        <h1>myBranch2</h1>
         <h1>some other work</h1>
+        <h1>myBranch</h1>
     </body>
 </html>
